added login page

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,7 +23,7 @@ block content
                 | Contact
 
   div.container
-    h1 Bootstrap starter template. Welcome to #{title}
+    h1 Welcome to #{title}
     p
       Use this document as a way to&nbsp;
       a(href="#", data-toggle="tooltip", title="first tooltip", id="example")
