--- a/views/login.jade
+++ b/views/login.jade
@@ -7,11 +7,11 @@ block content
       .span5.offset4
         .well
           legend Sign in to NLMS
-          form(method='POST', action='', accept-charset='UTF-8')
+          form(method='POST', action='/login_process', accept-charset='UTF-8')
             .alert.alert-error#login-error
-                a.close(data-dismiss='alert', href='#') x
-                span
-                  | Incorrect Username or Password!
+              a.close(data-dismiss='alert', href='#') x
+              span
+                | Incorrect Username or Password!
             input.input-block-level(placeholder='Username', type='text', name='username')
             input.input-block-level(placeholder='Password', type='password', name='password')
             label.checkbox
